force-app/main/default/objects/LogEvent__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description
  >Resource - https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_enum_System_Quiddity.htm</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>