force-app/main/default/objects/LogEvent__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description
  >Request ID, auto-populated when called from Apex Log or explicitly set when publishing Log__e directly</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>