force-app/main/default/objects/LogEvent__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description
  >Source of log event - e.g. Apex Class Name, Apex Method Name, Flow</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>