force-app/main/default/objects/LogEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quiddity__c</columns>
    <columns>Request_Id__c</columns>
    <columns>Salesforce_Record_Id__c</columns>
    <columns>Severity__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>